// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentShadow Component renders correctly with custom colour, opacity and height 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "height": 20,
      "position": "absolute",
      "top": -20,
      "width": "100%",
    }
  }
>
  <RNSVGSvgView
    bbHeight="20"
    bbWidth="100%"
    focusable={false}
    height="20"
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "flex": 0,
          "height": 20,
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              1193046,
              1,
              1293038678,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="contentShadow"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "contentShadow",
            "type": 1,
          }
        }
        height="20"
        propList={
          [
            "fill",
          ]
        }
        width="100%"
        x={0}
        y={0}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`ContentShadow Component renders correctly with defaults 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "height": 10,
      "position": "absolute",
      "top": -10,
      "width": "100%",
    }
  }
>
  <RNSVGSvgView
    bbHeight="10"
    bbWidth="100%"
    focusable={false}
    height="10"
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "flex": 0,
          "height": 10,
          "width": "100%",
        },
      ]
    }
    width="100%"
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              0,
              1,
              637534208,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="contentShadow"
          x1="0%"
          x2="0%"
          y1="0%"
          y2="100%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "contentShadow",
            "type": 1,
          }
        }
        height="10"
        propList={
          [
            "fill",
          ]
        }
        width="100%"
        x={0}
        y={0}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
